--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -70,7 +70,7 @@ loader:
     doc: DocLoader
     pptx: PPTXLoader
     txt: TextLoader
-    # wav: VideoAudioLoader
-    # mp3: VideoAudioLoader
-    # mp4: VideoAudioLoader
+    wav: VideoAudioLoader
+    mp3: VideoAudioLoader
+    mp4: VideoAudioLoader
     # odt: CustomDocLoader
