--- a/vdb/milvus.yaml
+++ b/vdb/milvus.yaml
@@ -1,6 +1,6 @@
 services:
   etcd:
-    container_name: milvus-etcd-an
+    container_name: milvus-etcd
     image: quay.io/coreos/etcd:v3.5.16
     environment:
       - ETCD_AUTO_COMPACTION_MODE=revision
@@ -17,7 +17,7 @@ services:
       retries: 3
 
   minio:
-    container_name: milvus-minio-an
+    container_name: milvus-minio
     image: minio/minio:RELEASE.2023-03-20T20-16-18Z
     environment:
       MINIO_ACCESS_KEY: minioadmin
@@ -35,7 +35,7 @@ services:
       retries: 3
 
   milvus:
-    container_name: milvus-standalone-an
+    container_name: milvus-standalone
     image: milvusdb/milvus:v2.5.4
     command: ["milvus", "run", "standalone"]
     security_opt:
