--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ x-ragondin: &ragondin_template
     - ./model_weights:/app/model_weights
     - ./data:/app/data # PDF data for RAG
     - ./ragondin:/app/ragondin # For dev mode
+    - ${DATA_VOLUME_DIR:-./volumes}:/app/volumes
 
   ports:
     - "${APP_PORT:-8080}:8080"
