OpenAI compatible interface: rename "completion" to "chat completion" + add "completion"

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -15,6 +15,7 @@ llm:
   base_url: ${oc.env:BASE_URL}
   model: ${oc.env:MODEL}
   api_key: ${oc.env:API_KEY}
+  logprobs: true
 
 vlm:
   <<: *llm_params
