--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ x-ragondin: &ragondin_template
     - ./ragondin:/app/ragondin # For dev mode
 
   ports:
-    - "${APP_PORT:-8080}:8080"
+    - "${APP_PORT:-8083}:${CONTAINER_PORT:-8080}"
     - ${RAY_PORT:-8265}:8265 # for ray
   env_file:
     - .env
