--- a/vdb/milvus.yaml
+++ b/vdb/milvus.yaml
@@ -1,6 +1,6 @@
 services:
   etcd:
-    container_name: milvus-etcd
+    container_name: milvus-etcd-ah
     image: quay.io/coreos/etcd:v3.5.16
     environment:
       - ETCD_AUTO_COMPACTION_MODE=revision
@@ -17,14 +17,14 @@ services:
       retries: 3
 
   minio:
-    container_name: milvus-minio
+    container_name: milvus-minio-ah
     image: minio/minio:RELEASE.2023-03-20T20-16-18Z
     environment:
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
     ports:
-      - "9001:9001"
-      - "9000:9000"
+      - "9003:9001"
+      - "9002:9000"
     volumes:
       - ${DOCKER_VOLUME_DIRECTORY:-../volumes}/minio:/minio_data
     command: minio server /minio_data --console-address ":9001"
@@ -35,7 +35,7 @@ services:
       retries: 3
 
   milvus:
-    container_name: milvus-standalone
+    container_name: milvus-standalone-ah
     image: milvusdb/milvus:v2.5.4
     command: ["milvus", "run", "standalone"]
     security_opt:
@@ -52,8 +52,8 @@ services:
       timeout: 20s
       retries: 3
     ports:
-      - "19530:19530"
-      - "9091:9091"
+      - "19531:19530"
+      - "9092:9091"
     depends_on:
       - "etcd"
       - "minio"
