--- a/docker-compose-ray.yaml
+++ b/docker-compose-ray.yaml
@@ -6,15 +6,12 @@ x-ragondin: &ragondin_template
     context: .
     dockerfile: Dockerfile
   volumes:
-    - ./.hydra_config:/app/.hydra_config
+    - /ray_mount:/ray_mount
     - ./model_weights:/app/model_weights
     - ./data:/app/data # PDF data for RAG
     - ./ragondin:/app/ragondin # For dev mode
     - ${DATA_VOLUME_DIR:-./volumes}:/app/volumes
-
-  ports:
-    - "${APP_PORT:-8083}:${CONTAINER_PORT:-8080}"
-    - ${RAY_DASHBOARD_PORT:-8265}:${RAY_DASHBOARD_PORT:-8265} # for ray dashboard
+  network_mode: host
   env_file:
     - .env
   shm_size: 10.24gb
