Added Ray env example

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,17 @@ PDFLoader=DoclingLoader
 
 # Audio
 WHISPER_MODEL=base
+
+# Ray
+RAY_NUM_CPUS=4
+RAY_NUM_GPUS=0.6
+RAY_DASHBOARD_PORT=8265
+RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
+
+# Specific to Ray cluster
+# CONFIG_PATH=/ray_mount/.hydra_config
+# DATA_DIR=/ray_mount/data
+# HF_HOME=/ray_mount/model_weights
+# HF_HUB_CACHE=/ray_mount/model_weights/hub
+# SHARED_ENV=/ray_mount/.env
+# DOCKER_VOLUME_DIRECTORY=/ray_mount/volumes
