--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -58,7 +58,7 @@ verbose:
 paths:
   prompts_dir: ${oc.env:PROMPTS_DIR, ../prompts}
   data_dir: ${oc.env:DATA_DIR, ../data}
-  volumes_dir: ${oc.env:DOCKER_VOLUME_DIRECTORY, ../volumes}
+  volumes_dir: ${oc.env:DOCKER_VOLUME_DIRECTORY, /app/volumes}
 
 
 prompt:
