--- a/vdb/milvus.yaml
+++ b/vdb/milvus.yaml
@@ -7,7 +7,7 @@ services:
       - ETCD_QUOTA_BACKEND_BYTES=4294967296
       - ETCD_SNAPSHOT_COUNT=50000
     volumes:
-      - ${MILVUS_VOLUME_DIRECTORY:-/app/volumes}/etcd:/etcd
+      - ${MILVUS_VOLUME_DIRECTORY:-../volumes}/etcd:/etcd
     command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
     healthcheck:
       test: ["CMD", "etcdctl", "endpoint", "health"]
@@ -24,7 +24,7 @@ services:
       # - "9001:9001"
       # - "9000:9000"
     volumes:
-      - ${MILVUS_VOLUME_DIRECTORY:-/app/volumes}/minio:/minio_data
+      - ${MILVUS_VOLUME_DIRECTORY:-../volumes}/minio:/minio_data
     command: minio server /minio_data --console-address ":9001"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
@@ -41,7 +41,7 @@ services:
       ETCD_ENDPOINTS: etcd:2379
       MINIO_ADDRESS: minio:9000
     volumes:
-      - ${MILVUS_VOLUME_DIRECTORY:-/app/volumes}/milvus:/var/lib/milvus
+      - ${MILVUS_VOLUME_DIRECTORY:-../volumes}/milvus:/var/lib/milvus
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
       interval: 30s
