--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -2,10 +2,10 @@ defaults:
   - _self_  # TODO: Silences the hydra version migration warning (PLEASE REVIEW FOR BREAKING CHANGES)
   - chunker: recursive_splitter #semantic_splitter
   - retriever: multiQuery
-  - rag: SimpleRag
+  - rag: ChatBotRag
 
 llm_params: &llm_params
-  temperature: 0
+  temperature: 0.3
   timeout: 60
   max_retries: 2
   #frequency_penalty: 0.2
@@ -58,12 +58,12 @@ verbose:
 paths:
   prompts_dir: ${oc.env:PROMPTS_DIR, ../prompts}
   data_dir: ${oc.env:DATA_DIR, ../data}
-  volumes_dir: ${oc.env:MILVUS_VOLUME_DIRECTORY, /app/volumes}
+  volumes_dir: /app/volumes
 
 
 prompt:
   rag_sys_pmpt: rag_sys_prompt_template.txt # rag_sys_pmpt_tmpl_ifa.txt
-  context_pmpt_tmpl: contextualize_prompt_template.txt
+  contextualizer_pmpt: contextualizer_pmpt.txt
 
 loader:
   image_captioning: true
@@ -86,3 +86,5 @@ loader:
 ray:
   num_cpus: ${oc.decode:${oc.env:RAY_NUM_CPUS, 4}}
   num_gpus: ${oc.decode:${oc.env:RAY_NUM_GPUS, 1}}
+  local_deployment: ${oc.decode:${oc.env:LOCAL_DEPLOYMENT, true}} # set false for cluster deployment
+  n_parallele_indexation: ${oc.decode:${oc.env:N_PARALLELE_INDEXATION, 2}}
