--- a/.env.example
+++ b/.env.example
@@ -11,12 +11,13 @@ VLM_MODEL=
 VLM_SEMAPHORE=10
 
 # App
-APP_PORT=8083 # do not change
-CONTAINER_PORT=8080
+APP_PORT=8080 # this is the forwarded port
+CONTAINER_PORT=8080 # this is the port used in the container. No need to change it only if necessary
 APP_HOST=0.0.0.0
 
 # RAY
 RAY_DEDUP_LOGS=0
+RAY_DASHBOARD_PORT=8265
 
 # Vector db VDB Milvus
 VDB_HOST=milvus
@@ -34,7 +35,7 @@ EMBEDDER_MODEL=HIT-TMG/KaLM-embedding-multilingual-mini-v1
 # RERANKER
 RERANKER_MODEL=jinaai/jina-colbert-v2
 RERANKER_ENABLED=true
-RERANKER_TOP_K=4
+RERANKER_TOP_K=4 # upgrade to 8 for better results if your llm has a wider context window
 
 
 # Prompts
