--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "aiopath>=0.7.7",
     "chainlit>=2.2.1",
-    "docling>=2.24.0",
     "einops>=0.8.1",
     "fastembed-gpu>=0.4.2",
     "hydra-core>=1.3.2",
@@ -33,6 +32,8 @@ dependencies = [
     "chardet>=5.2.0",
     "openai-whisper>=20240930",
     "torch>=2.4.1",
+    "mxbai-rerank>=0.1.3",
+    "docling>=2.15.1",
 ]
 
 [dependency-groups]
