add reranker choice & small corrections

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -46,6 +46,7 @@ insertion:
 reranker:
   enable: ${oc.decode:${oc.env:RERANKER_ENABLED, true}}
   model_name: ${oc.env:RERANKER_MODEL, jinaai/jina-colbert-v2}
+  reranker_type: ${oc.decode:${oc.env:RERANKER_MODEL_TYPE, colbert}}
   top_k: ${oc.decode:${oc.env:RERANKER_TOP_K, 4}}
 
 grader:
