--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -32,7 +32,7 @@ embedder:
   
 vectordb:
   host: ${oc.env:VDB_HOST, milvus}
-  port: ${oc.env:VDB_PORT, 19530}
+  port: ${oc.env:VDB_iPORT, 19530}
   connector_name: ${oc.env:VDB_CONNECTOR_NAME, milvus}
   collection_name: vdb_test 
   hybrid_mode: true
@@ -83,4 +83,4 @@ ray:
   num_cpus: ${oc.decode:${oc.env:RAY_NUM_CPUS, 4}}
   num_gpus: ${oc.decode:${oc.env:RAY_NUM_GPUS, 1}}
   local_deployment: ${oc.decode:${oc.env:LOCAL_DEPLOYMENT, true}} # set false for cluster deployment
-  n_parallele_indexation: ${oc.decode:${oc.env:N_PARALLELE_INDEXATION, 2}}
+  n_parallel_indexation: ${oc.decode:${oc.env:N_PARALLEL_INDEXATION, 2}}
