--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ x-ragondin: &ragondin_template
     - ${MILVUS_VOLUME_DIRECTORY:-./volumes}:/app/volumes
 
   ports:
-    - "${APP_PORT:-8083}:${CONTAINER_PORT:-8080}"
+    - "${APP_PORT:-8080}:${APP_iPORT:-8080}"
     - ${RAY_DASHBOARD_PORT:-8265}:${RAY_DASHBOARD_PORT:-8265} # for ray dashboard
 
   env_file:
