--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "torch>=2.4.1",
     "robotframework>=7.2.2",
     "robotframework-requests>=0.9.7",
+    "psutil>=7.0.0",
 ]
 
 [dependency-groups]
