added local deployment to .env

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,4 @@ RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 # HF_HUB_CACHE=/ray_mount/model_weights/hub
 # SHARED_ENV=/ray_mount/.env
 # DATA_VOLUME_DIRECTORY=/ray_mount/volumes
+# LOCAL_DEPLOYMENT=false
