--- a/.env.example
+++ b/.env.example
@@ -52,10 +52,7 @@ RAY_DASHBOARD_PORT=8265
 RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 
 # Specific to Ray cluster
-# CONFIG_PATH=/ray_mount/.hydra_config
-# DATA_DIR=/ray_mount/data
-# HF_HOME=/ray_mount/model_weights
-# HF_HUB_CACHE=/ray_mount/model_weights/hub
 # SHARED_ENV=/ray_mount/.env
-# DATA_VOLUME_DIRECTORY=/ray_mount/volumes
+# RAY_DASHBOARD_PORT=8265
 # LOCAL_DEPLOYMENT=false
+# RAY_ADDRESS=ray://X.X.X.X:10001
