--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -29,6 +29,8 @@ semaphore:
 embedder:
   type: huggingface
   model_name: ${oc.env:EMBEDDER_MODEL_NAME, jinaai/jina-embeddings-v3}
+  base_url: ${oc.env:EMBEDDER_BASE_URL, http://vllm:8000}
+  api_key: ${oc.env:EMBEDDER_API_KEY, None}
   
 vectordb:
   host: ${oc.env:VDB_HOST, milvus}
