added embedder api key

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,7 @@ RETRIEVER_TOP_K=5
 # EMBEDDER
 EMBEDDER_MODEL_NAME=jinaai/jina-embeddings-v3
 EMBEDDER_BASE_URL=http://vllm:8000/v1
+EMBEDDER_API_KEY=EMPTY
 
 # RERANKER
 RERANKER_MODEL=jinaai/jina-colbert-v2
