Get task status as indexer method

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -29,7 +29,7 @@ semaphore:
 embedder:
   type: huggingface
   model_name: ${oc.env:EMBEDDER_MODEL_NAME, jinaai/jina-embeddings-v3}
-  base_url: ${oc.env:EMBEDDER_BASE_URL, http://vllm:8000}
+  base_url: ${oc.env:EMBEDDER_BASE_URL, http://vllm:8000/v1}
   api_key: ${oc.env:EMBEDDER_API_KEY, None}
   
 vectordb:
