--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,8 @@ RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 
 # Specific to Ray cluster
 # SHARED_ENV=/ray_mount/.env
+# MODEL_WEIGHTS_VOLUME=/ray_mount/model_weights
+# DATA_VOLUME=/ray_mount/data
 # RAY_DASHBOARD_PORT=8265
 # LOCAL_DEPLOYMENT=false
 # RAY_ADDRESS=ray://X.X.X.X:10001
