--- a/docker-compose-ray.yaml
+++ b/docker-compose-ray.yaml
@@ -6,13 +6,16 @@ x-ragondin: &ragondin_template
     context: .
     dockerfile: Dockerfile
   volumes:
-    - /ray_mount/data:/app/data # PDF data for RAG
-    - /ray_mount/model_weights:/app/model_weights # Model weights for RAG
+    - ${DATA_VOLUME:-./data}:/app/data # PDF data for RAG
+    - ${MODEL_WEIGHTS_VOLUME:-./model_weights}:/app/model_weights # Model weights for RAG
     - ./ragondin:/app/ragondin # For dev mode
     - ${MILVUS_VOLUME_DIRECTORY:-./volumes}:/app/volumes
-  network_mode: host
+  # network_mode: host
+  ports:
+    - "${APP_PORT:-8080}:${APP_iPORT:-8080}"
+    - ${RAY_DASHBOARD_PORT:-8265}:${RAY_DASHBOARD_PORT:-8265} # for ray dashboard
   env_file:
-    - /ray_mount/.env
+    - .env
   shm_size: 10.24gb
 
   depends_on:
