--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiopath>=0.7.7",
-    "chainlit>=2.2.1",
     "einops>=0.8.1",
     "fastembed-gpu>=0.4.2",
     "hydra-core>=1.3.2",
@@ -37,6 +36,9 @@ dependencies = [
     "robotframework>=7.2.2",
     "robotframework-requests>=0.9.7",
     "psutil>=7.0.0",
+    "jinaai>=0.2.10",
+    "mcp>=1.9.0",
+    "chainlit>=2.5.5",
 ]
 
 [dependency-groups]
