--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -64,11 +64,12 @@ prompt:
   chunk_contextualizer_pmpt: chunk_contextualizer_tmpl.txt
 
 loader:
-  image_captioning: true
+  image_captioning: false
+  save_markdown: true
   audio_model: ${oc.env:WHISPER_MODEL, base}
   file_loaders:
     txt: TextLoader
-    pdf: ${oc.env:PDFLoader, DoclingLoader}  # DoclingLoader # MarkerLoader # CustomPyMuPDFLoader # Custompymupdf4llm
+    pdf: ${oc.env:PDFLoader, DoclingLoader}  # DoclingLoader # MarkerLoader # PyMuPDFLoader # Custompymupdf4llm
     docx: MarkItDownLoader
     pptx: PPTXLoader
     doc: DocLoader
@@ -86,8 +87,7 @@ loader:
     # odt: CustomDocLoader
 
 ray:
-  num_gpus: ${oc.decode:${oc.env:RAY_NUM_GPUS, 0.1}}
-  pool_size: ${oc.decode:${oc.env:RAY_POOL_SIZE, 1}}
-  max_tasks_per_worker: ${oc.decode:${oc.env:RAY_MAX_TASKS_PER_WORKER, 5}}
+  num_cpus: ${oc.decode:${oc.env:RAY_NUM_CPUS, 12}} # if not supplied, will use all available CPUs in the machine
+  num_gpus: ${oc.decode:${oc.env:RAY_NUM_GPUS, 1}}
   local_deployment: ${oc.decode:${oc.env:LOCAL_DEPLOYMENT, true}} # set false for cluster deployment
   n_parallel_indexation: ${oc.decode:${oc.env:N_PARALLEL_INDEXATION, 2}}
