--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -61,11 +61,12 @@ prompt:
   contextualizer_pmpt: contextualizer_pmpt.txt
 
 loader:
-  image_captioning: true
+  image_captioning: false
+  save_markdown: true
   audio_model: ${oc.env:WHISPER_MODEL, base}
   file_loaders:
     txt: TextLoader
-    pdf: ${oc.env:PDFLoader, DoclingLoader}  # DoclingLoader # MarkerLoader # CustomPyMuPDFLoader # Custompymupdf4llm
+    pdf: ${oc.env:PDFLoader, DoclingLoader}  # DoclingLoader # MarkerLoader # PyMuPDFLoader # Custompymupdf4llm
     docx: MarkItDownLoader
     pptx: PPTXLoader
     doc: DocLoader
@@ -81,7 +82,7 @@ loader:
     aac: VideoAudioLoader
 
 ray:
-  num_cpus: ${oc.decode:${oc.env:RAY_NUM_CPUS, 4}}
+  num_cpus: ${oc.decode:${oc.env:RAY_NUM_CPUS, 12}} # if not supplied, will use all available CPUs in the machine
   num_gpus: ${oc.decode:${oc.env:RAY_NUM_GPUS, 1}}
   local_deployment: ${oc.decode:${oc.env:LOCAL_DEPLOYMENT, true}} # set false for cluster deployment
   n_parallel_indexation: ${oc.decode:${oc.env:N_PARALLEL_INDEXATION, 2}}
