better handling of ray workers

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,9 @@ WHISPER_MODEL=base
 # Ray
 RAY_NUM_CPUS=4
 RAY_NUM_GPUS=0.6
+RAY_POOL_TIMEOUT=120
+RAY_POOL_SIZE=4
+RAY_MAX_TASKS_PER_WORKER=5
 RAY_DASHBOARD_PORT=8265
 RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 
