--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -81,7 +81,10 @@ loader:
     # odt: CustomDocLoader
 
 ray:
-  num_cpus: ${oc.decode:${oc.env:RAY_NUM_CPUS, 4}}
-  num_gpus: ${oc.decode:${oc.env:RAY_NUM_GPUS, 1}}
+  num_cpus: ${oc.decode:${oc.env:RAY_NUM_CPUS, 1}}
+  num_gpus: ${oc.decode:${oc.env:RAY_NUM_GPUS, 0.1}}
+  pool_size: ${oc.decode:${oc.env:RAY_POOL_SIZE, 1}}
+  pool_timeout: ${oc.decode:${oc.env:RAY_POOL_TIMEOUT, 120}}
+  max_tasks_per_worker: ${oc.decode:${oc.env:RAY_MAX_TASKS_PER_WORKER, 5}}
   local_deployment: ${oc.decode:${oc.env:LOCAL_DEPLOYMENT, true}} # set false for cluster deployment
   n_parallel_indexation: ${oc.decode:${oc.env:N_PARALLEL_INDEXATION, 2}}
