--- a/docker-compose-ray.yaml
+++ b/docker-compose-ray.yaml
@@ -13,7 +13,7 @@ x-ragondin: &ragondin_template
   ports:
     - "${APP_PORT:-8080}:${APP_iPORT:-8080}"
   env_file:
-    - .env
+    - ${SHARED_ENV:-.env}
   shm_size: 10.24gb
 
   depends_on:
