Add .md support

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -78,6 +78,7 @@ loader:
     flv: VideoAudioLoader
     wma: VideoAudioLoader
     aac: VideoAudioLoader
+    md: MarkdownLoader
     # odt: CustomDocLoader
 
 ray:
