--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -87,7 +87,7 @@ loader:
     # odt: CustomDocLoader
 
 ray:
-  num_cpus: ${oc.decode:${oc.env:RAY_NUM_CPUS, 12}} # if not supplied, will use all available CPUs in the machine
-  num_gpus: ${oc.decode:${oc.env:RAY_NUM_GPUS, 1}}
-  local_deployment: ${oc.decode:${oc.env:LOCAL_DEPLOYMENT, true}} # set false for cluster deployment
   n_parallel_indexation: ${oc.decode:${oc.env:N_PARALLEL_INDEXATION, 2}}
+  num_cpus: ${oc.decode:${oc.env:NUM_CPUS, 12}}
+  num_gpus: ${oc.decode:${oc.env:NUM_GPUS, 1}}
+  local_deployment: ${oc.decode:${oc.env:LOCAL_DEPLOYMENT, true}}
