serialization actor  and queue rework

--- a/.env.example
+++ b/.env.example
@@ -42,8 +42,7 @@ RERANKER_TOP_K=5 # Number of documents to return after reranking. upgrade to 8 f
 PROMPTS_DIR=../prompts/example3
 
 # Loaders
-PDFLoader=DoclingLoader
-N_PARALLEL_INDEXATION=3 # number of indexation tasks to launch in parallel
+PDFLoader=MarkerLoader
 
 # Audio
 WHISPER_MODEL=base
@@ -55,9 +54,9 @@ AUTH_TOKEN=sk-ragdondin-1234
 ONLY_SEARCH_AND_INDEXER_API=false
 
 # Ray
-RAY_NUM_GPUS=0.6
-RAY_POOL_SIZE=4
-RAY_MAX_TASKS_PER_WORKER=5
+RAY_NUM_GPUS=0.1
+RAY_POOL_SIZE=4 # Number of serializer actor instances
+RAY_MAX_TASKS_PER_WORKER=5 # Number of tasks per serializer instance
 RAY_DASHBOARD_PORT=8265
 RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 
@@ -65,5 +64,7 @@ RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 # SHARED_ENV=/ray_mount/.env
 # MODEL_WEIGHTS_VOLUME=/ray_mount/model_weights
 # DATA_VOLUME=/ray_mount/data
+# CONFIG_VOLUME=/ray_mount/.hydra_config
+# DB_VOLUME=/ray_mount/db
 # RAY_DASHBOARD_PORT=8265
 # RAY_ADDRESS=ray://X.X.X.X:10001
