--- a/vdb/milvus.yaml
+++ b/vdb/milvus.yaml
@@ -7,7 +7,7 @@ services:
       - ETCD_QUOTA_BACKEND_BYTES=4294967296
       - ETCD_SNAPSHOT_COUNT=50000
     volumes:
-      - ${MILVUS_VOLUME_DIRECTORY:-../volumes}/etcd:/etcd
+      - ${MILVUS_VOLUME_DIRECTORY:-./volumes}/etcd:/etcd
     command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
     healthcheck:
       test: ["CMD", "etcdctl", "endpoint", "health"]
@@ -21,7 +21,7 @@ services:
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
     volumes:
-      - ${MILVUS_VOLUME_DIRECTORY:-../volumes}/minio:/minio_data
+      - ${MILVUS_VOLUME_DIRECTORY:-./volumes}/minio:/minio_data
     command: minio server /minio_data --console-address ":9001"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
@@ -38,15 +38,15 @@ services:
       ETCD_ENDPOINTS: etcd:2379
       MINIO_ADDRESS: minio:9000
     volumes:
-      - ${MILVUS_VOLUME_DIRECTORY:-../volumes}/milvus:/var/lib/milvus
+      - ${MILVUS_VOLUME_DIRECTORY:-./volumes}/milvus:/var/lib/milvus
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
       interval: 30s
       start_period: 90s
       timeout: 20s
       retries: 3
-    ports:
-      - "${VDB_PORT:-19530}:${VDB_iPORT:-19530}"
+    # ports:
+    #   - "${VDB_PORT:-19530}:${VDB_iPORT:-19530}"
     depends_on:
       - "etcd"
       - "minio"
