--- a/cluster.yaml
+++ b/cluster.yaml
@@ -12,7 +12,7 @@ docker:
     - --gpus all
     - -v /ray_mount/model_weights:/app/model_weights
     - -v /ray_mount/data:/app/data
-    - -v /ray_mount/volumes:/app/volumes
+    - -v /ray_mount/db:/app/db
     - -v /ray_mount/.hydra_config:/app/.hydra_config
     - --env-file /ray_mount/.env
 auth:
