--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ x-ragondin: &ragondin_template
     - ${DB_VOLUME:-./db}:/app/db
   ports:
     - ${APP_PORT:-8080}:${APP_iPORT:-8080}
-    - ${RAY_DASHBOARD_PORT:-8265}:${RAY_DASHBOARD_PORT:-8265}
+    - ${RAY_DASHBOARD_PORT:-8265}:8265
   env_file:
     - ${SHARED_ENV:-.env}
   shm_size: 10.24gb
