--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ volumes/*
 
 # benchmarking
 evaluation-embedder-reranker
+
+# services
+services/
+services/*
+!services/.gitkeep # Keep the placeholder
