--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ dependencies = [
     "torch>=2.4.1",
     "robotframework>=7.2.2",
     "robotframework-requests>=0.9.7",
+    "asyncpg>=0.30.0",
+    "boto3>=1.38.33",
 ]
 
 [dependency-groups]
