--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,17 @@ x-ragondin: &ragondin_template
     dockerfile: Dockerfile
   volumes:
     - ${CONFIG_VOLUME:-./.hydra_config}:/app/.hydra_config
-    - ${DATA_VOLUME:-./data}:/app/data
+    - ${DATA_VOLUME:-./data}:/app/data # PDF data for RAG
     - ${MODEL_WEIGHTS_VOLUME:-~/.cache/huggingface}:/app/model_weights # Model weights for RAG
     - ./ragondin:/app/ragondin # For dev mode
-    - ${MILVUS_VOLUME_DIRECTORY:-./volumes}:/app/volumes
+    - ${DB_VOLUME:-./db}:/app/db
   ports:
-    - "${APP_PORT:-8080}:${APP_iPORT:-8080}"
+    - ${APP_PORT:-8080}:${APP_iPORT:-8080}
     - ${RAY_DASHBOARD_PORT:-8265}:8265 # for ray dashboard
+  networks:
+    default:
+      aliases:
+        - ragondin
   env_file:
     - ${SHARED_ENV:-.env}
   shm_size: 10.24gb
@@ -31,7 +35,7 @@ x-vllm: &vllm_template
     - HUGGING_FACE_HUB_TOKEN
   ipc: "host"
   volumes:
-    - ./vllm_cache:/root/.cache/huggingface
+      - ${VLLM_CACHE:-/root/.cache/huggingface}:/root/.cache/huggingface # put ./vllm_cache if you want to have the weights on the vllm_cache folder in your project
   command: >
     --model ${EMBEDDER_MODEL_NAME:-jinaai/jina-embeddings-v3}
     --trust-remote-code
