--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -58,6 +58,7 @@ paths:
   prompts_dir: ${oc.env:PROMPTS_DIR, ../prompts/example3}
   data_dir: ${oc.env:DATA_DIR, ../data}
   db_dir: ${oc.env:DB_DIR, /app/db}
+  log_dir: ${oc.env:LOG_DIR, /app/logs}
 
 prompt:
   rag_sys_pmpt: rag_sys_prompt_template.txt # rag_sys_pmpt_tmpl_ifa.txt
