docs for data persistency and & readme updated

--- a/.env.example
+++ b/.env.example
@@ -14,27 +14,23 @@ VLM_SEMAPHORE=10
 APP_PORT=8080 # this is the forwarded port
 APP_HOST=0.0.0.0
 
-# RAY
-RAY_DEDUP_LOGS=0
-RAY_DASHBOARD_PORT=8265
-
 # Vector db VDB Milvus
 VDB_HOST=milvus
 VDB_PORT=19530
 VDB_CONNECTOR_NAME=milvus
 
 # RETRIEVER
-CONTEXTUAL_RETRIEVAL=false
-RETRIEVER_TOP_K=12 
+CONTEXTUAL_RETRIEVAL=true
+RETRIEVER_TOP_K=20 # Number of documents to return before reranking
 
 # EMBEDDER
-EMBEDDER_MODEL_NAME=jinaai/jina-embeddings-v3
+EMBEDDER_MODEL_NAME=Qwen/Qwen3-Embedding-0.6B # or jinaai/jina-embeddings-v3 if you will
 EMBEDDER_BASE_URL=http://vllm:8000/v1
 EMBEDDER_API_KEY=EMPTY
 
 # RERANKER
 RERANKER_ENABLED=false
-RERANKER_MODEL=jinaai/jina-reranker-v2-base-multilingual # jinaai/jina-colbert-v2
+RERANKER_MODEL=Alibaba-NLP/gte-multilingual-reranker-base # or jinaai/jina-reranker-v2-base-multilingual or jinaai/jina-colbert-v2 if you want
 RERANKER_MODEL_TYPE=crossencoder # colbert
 RERANKER_TOP_K=5 # Number of documents to return after reranking. upgrade to 8 for better results if your llm has a wider context window
 
@@ -54,13 +50,16 @@ AUTH_TOKEN=sk-ragdondin-1234
 ONLY_SEARCH_AND_INDEXER_API=false
 
 # Ray
+RAY_DEDUP_LOGS=0
+RAY_DASHBOARD_PORT=8265
+
 RAY_NUM_GPUS=0.1
 RAY_POOL_SIZE=4 # Number of serializer actor instances
 RAY_MAX_TASKS_PER_WORKER=5 # Number of tasks per serializer instance
 RAY_DASHBOARD_PORT=8265
 RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 
-# Specific to Ray cluster
+## Specific to Ray cluster
 # SHARED_ENV=/ray_mount/.env
 # MODEL_WEIGHTS_VOLUME=/ray_mount/model_weights
 # DATA_VOLUME=/ray_mount/data
@@ -68,3 +67,26 @@ RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 # DB_VOLUME=/ray_mount/db
 # RAY_DASHBOARD_PORT=8265
 # RAY_ADDRESS=ray://X.X.X.X:10001
+
+
+# # For chainlit data persistency
+# ## Persistency services (localstack + AWS (Deployed Locally))
+# CHAINLIT_DATALAYER_COMPOSE=extern/chainlit-datalayer/compose.yaml
+
+# ## Secret key for Chainlit authentication
+# CHAINLIT_AUTH_SECRET=... # has to be generated with with this command: 'uv run chainlit create-secret'
+
+# ## PostgreSQL instance for data persistency.
+# POSTGRES_USER=root
+# POSTGRES_PASSWORD=root
+# POSTGRES_DB=postgres
+# POSTGRES_PORT=5432
+# DATABASE_URL=postgresql://${POSTGRES_USER:-root}:${POSTGRES_PASSWORD:-root}@postgres:${POSTGRES_PORT:-5432}/${POSTGRES_DB:-postgres} # for chainlit
+
+# ## S3 configuration (This is bucket deploy in deploy in a container).
+# BUCKET_NAME=my-bucket
+# APP_AWS_ACCESS_KEY=random-key
+# APP_AWS_SECRET_KEY=random-key
+# APP_AWS_REGION=eu-central-1
+# LOCALSTACK_PORT=4566
+# DEV_AWS_ENDPOINT=http://localstack:${LOCALSTACK_PORT:-4566}
