--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "robotframework>=7.2.2",
     "robotframework-requests>=0.9.7",
     "infinity-client>=0.0.76",
+    "hdbscan>=0.8.40",
 ]
 
 [dependency-groups]
