added logs volume to cluster

--- a/cluster.yaml
+++ b/cluster.yaml
@@ -14,6 +14,7 @@ docker:
     - -v /ray_mount/data:/app/data
     - -v /ray_mount/db:/app/db
     - -v /ray_mount/.hydra_config:/app/.hydra_config
+    - -v /ray_mount/logs:/app/logs
     - --env-file /ray_mount/.env
 auth:
   ssh_user: ubuntu
