--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -90,7 +90,8 @@ loader:
     md: MarkdownLoader
   marker_max_tasks_per_child: ${oc.decode:${oc.env:MARKER_MAX_TASKS_PER_CHILD, 10}}
   marker_pool_size: ${oc.decode:${oc.env:MARKER_POOL_SIZE, 1}}
-  marker_child_processes: ${oc.decode:${oc.env:MARKER_CHILD_PROCESSES, 5}}
+  marker_max_processes: ${oc.decode:${oc.env:MARKER_MAX_PROCESSES, 5}}
+  marker_min_processes: ${oc.decode:${oc.env:MARKER_MIN_PROCESSES, 1}}
   marker_num_gpus: ${oc.decode:${oc.env:MARKER_NUM_GPUS, 1}}
 
 ray:
